# helmhost

./: .editorconfig  .gitignore  .mcp.json  .wptignore  CHANGELOG.md  CLA.md  Cargo.toml  LICENSE  OPEN_COMPONENTS.md  README.md  codenames.toml
.github/: pull_request_template.md
.github/workflows/: build-dev.yml  ci.yml  pages.yml  release.yml
.waypoint/agent/: HOOKS.md  WPT_FIRST.md  mcp.json
apps/client/: README.md  pubspec.yaml
apps/client/assets/legal/: THIRD_PARTY_NOTICES.md
apps/client/lib/: bridge.dart  keysyms.dart  main.dart  prefs.dart  session_helpers.dart  thumbs.dart
apps/client/lib/logging/: logger.dart
apps/client/lib/session/: bandwidth_preset.dart  buffering_overlay.dart  credentials.dart  fb_texture.dart  open_session_registry.dart  paint_helpers.dart  session_ipc.dart  session_link_stats.dart  session_overview.dart  session_page.dart  session_shortcuts.dart  session_status_bar.dart
apps/client/lib/storage/: app_paths.dart  credential_store.dart
apps/client/lib/ui/: app_about.dart  app_licenses.dart
apps/client/lib/update/: app_uninstall.dart  app_updater.dart
apps/client/linux/: CMakeLists.txt
apps/client/linux/runner/: my_application.cc
apps/client/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/client/macos/Runner/: AppDelegate.swift  HelmFbTexture.swift  Info.plist  MainFlutterWindow.swift  Release.entitlements
apps/client/macos/Runner.xcodeproj/: project.pbxproj
apps/client/test/: keysyms_test.dart  prefs_test.dart  session_helpers_test.dart  session_ux_test.dart  thumbs_test.dart  widget_test.dart
apps/client/test/helpers/: fake_helm_bridge.dart  fake_helm_bridge_test.dart  tap_menu.dart
apps/client/test/session/: buffering_overlay_test.dart  credentials_test.dart  open_session_registry_test.dart  paint_helpers_test.dart  remote_resize_test.dart  session_overview_test.dart  session_shortcuts_test.dart  session_status_bar_test.dart
apps/client/test/storage/: app_paths_test.dart
apps/client/test/ui/: app_about_test.dart
apps/client/test/update/: linux_updater_test.dart
apps/client/windows/: CMakeLists.txt
apps/client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
crates/core/: Cargo.toml
crates/core/src/: fb_cache.rs  focus.rs  lib.rs  protocol.rs  registry.rs  runtime.rs  session.rs
crates/core/tests/: creds.rs  protocol_mock.rs  registry.rs  runtime.rs  session_focus.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/rfb/: Cargo.toml
crates/rfb/src/: auth.rs  factory.rs  fb_cache.rs  handshake.rs  io.rs  lib.rs  messages.rs  pixel_format.rs  session.rs  tight.rs  vencrypt.rs  zrle.rs
crates/rfb/src/encoding/: bounds.rs  constants.rs  mod.rs
crates/rfb/tests/: bell_clipboard.rs  continuous_updates.rs  framebuffer_input.rs  handshake.rs  mock_peer.rs  multi_session.rs  server_messages.rs  vencrypt_negotiate.rs
docs/: book.toml
docs/appcast/: appcast-rcs.xml  appcast.xml
docs/src/: SUMMARY.md  goals.md  overview.md  stack.md  versioning.md
packaging/sparkle/: KEYS.txt  SUPublicEDKey.txt
packaging/windows/: helmhost.iss
packaging/winsparkle/: dsa_pub.pem
scripts/: assert_ffi_in_artifact.sh  build_client.sh  build_dev.sh  build_release.sh  ci_flutter.sh  ci_rust.sh  copy_ffi_into_bundle.sh  generate_appcast.sh  generate_third_party_notices.sh  hh-version  package_linux_deb.sh  package_macos_pkg.sh  package_macos_uninstall.sh  package_windows_inno.sh  sign_update_macos.sh  sign_update_windows.sh  write_digests.sh
(+11 files in other folders)
