[workspace]
resolver = "2"
members = ["crates/core", "crates/rfb"]
default-members = ["crates/core", "crates/rfb"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
helmhost-core = { path = "crates/core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

