[workspace]
resolver = "2"
members = ["crates/core", "crates/rfb", "crates/ffi"]
default-members = ["crates/core", "crates/rfb", "crates/ffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-BackBenchDevs-Proprietary"

[workspace.dependencies]
helmhost-core = { path = "crates/core" }
helmhost-rfb = { path = "crates/rfb" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
