[package]
name = "helmhost-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session manager, connection registry, input focus, protocol traits"

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
