[package]
name = "helmhost-rfb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RFB / VNC protocol engine for Helmhost"

[dependencies]
helmhost-core = { workspace = true }
tokio = { workspace = true }
des = "0.8"
cipher = "0.4"
flate2 = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
